src/test/compile-fail/use-mod-2.rs
// Copyright 2014 The Rust Project Developers. See the COPYRIGHT
// file at the top-level directory of this distribution and at
// http://rust-lang.org/COPYRIGHT.
//
// Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
// http://www.apache.org/licenses/LICENSE-2.0> or the MIT license
// <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
// option. This file may not be copied, modified, or distributed
// except according to those terms.

mod foo {
    use self::{mod};
    //~^ ERROR unresolved import `self`. There is no `self` in `???`

    use super::{mod};
    //~^ ERROR unresolved import `super`. There is no `super` in `???`
}

fn main() {}
